# zedcam

./: .clang-format  CMakeLists.txt  README.md  dobuild.sh
include/: .zedCamera.h.swp  zedCamera.h
settings/: zed2i_settings.yml
src/: .main.cpp.swp  .zedCamera.cpp.swp  main.cpp  testmain.cpp  zedCamera.cpp
